test/spec_vectors/simd_f64x2_arith/fail/module_14.wat
(module (func $f64x2.mul-1st-arg-empty (result v128) (f64x2.mul (v128.const f64x2 0 0))))